--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 Learning Python
 
 This is wheere I will practice and learn 
+
+I finally learned how to use the basics of Github on cmd, 
+Im really happy by this hehe
+
+.....
