--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
 Learning Python
 
-This is wheere I will practice and learn 
+This is wheere I will practice and learn.
+
+The website I am using to learn is https://docs.python.org/3/tutorial/index.html 
 
 I finally learned how to use the basics of Github on cmd, 
 Im really happy by this hehe
