--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ I finally learned how to use the basics of Github on cmd,
 Im really happy by this hehe
 
 .....
+
+Its really fun solving problems on my own. 
