--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,11 @@ I finally learned how to use the basics of Github on cmd,
 Im really happy by this hehe
 
 .....
-
+Day 3
 Its really fun solving problems on my own. 
+
+Day 4
+Hahah I did something dumb and accidentally erased
+the PATH for git. In the end I reinstalled git 
+to reset my path.
+
