--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,20 @@ Im really happy by this hehe
 
 .....
 Day 3
-Its really fun solving problems on my own. 
+Its really fun solving problems on my own.
+I had another problem where I couldnt build input(),
+then realized sublime text did not support it. So i
+installed the SublimeREPL, it works really well :D!! 
 
 Day 4
 Hahah I did something dumb and accidentally erased
 the PATH for git. In the end I reinstalled git 
 to reset my path.
+
+While learning "for loop" and using "for i in range()"
+I seriously wish someone told me earlier "i" can be any letter 
+as long as your consistent. It makes it less complicated to understand.
+Haha, self discovery is so much better. I'm having fun hehe.
+
+
 
